syntax = "proto3";

import "google/protobuf/empty.proto";

package cardego_data;

service CardegoDataService {
    rpc HealthCheck (google.protobuf.Empty) returns (google.protobuf.Empty);
}